--- a/packages/plugin-components-pane/demo/demo.hbs
+++ b/packages/plugin-components-pane/demo/demo.hbs
@@ -11,9 +11,15 @@
 
   <body>
     <script src="https://polyfill.alicdn.com/polyfill.min.js?features=es6%2Ces7"></script>
-    <script src="//dev.g.alicdn.com/lattice/base-front/1.0.0/lib/react/react.js"></script>
-    <script src="//dev.g.alicdn.com/lattice/base-front/1.0.0/lib/react-dom/react-dom.js"></script>
-    <script src="//dev.g.alicdn.com/lattice/base-front/1.0.0/lib/moment/moment.js"></script>
+    <!-- <script src="//dev.g.alicdn.com/lattice/base-front/1.0.0/lib/react/react.js"></script>
+    <script src="//dev.g.alicdn.com/lattice/base-front/1.0.0/lib/react-dom/react-dom.js"></script> -->
+     <!-- React，可替换为 production 包 -->
+    <script src="https://g.alicdn.com/code/lib/react/16.13.1/umd/react.production.min.js"></script>
+    <!-- React DOM，可替换为 production 包 -->
+    <script src="https://g.alicdn.com/code/lib/react-dom/16.13.1/umd/react-dom.production.min.js"></script>
+    <!-- <script src="//dev.g.alicdn.com/lattice/base-front/1.0.0/lib/moment/moment.js"></script> -->
+     <!-- 日期处理包，Fusion Next 的依赖 -->
+    <script src="https://g.alicdn.com/mylib/moment/2.24.0/min/moment.min.js"></script>
     <script src="//gw.alipayobjects.com/os/lib/alifd/next/1.22.13/dist/next.min.js"></script>
     <script src="//g.alicdn.com/platform/c/react15-polyfill/0.0.1/dist/index.js"></script>
     <script src="//g.alicdn.com/code/lib/prop-types/15.7.2/prop-types.js"></script>
